Fixing some display issues in the menu bar on mobile devices.

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -13,51 +13,72 @@
   display: none;
 }
 
-.home {
+.content, .mat-toolbar {
+  max-width: 1200px;
+  margin:auto;
+}
+
+.mat-toolbar {
   display: block;
+  height: 40px;
+
+
+
+  div.account {
+    position: absolute;
+    font-size: 14px;
+    right: 20px;
+    top: 2px;
+  }
+
+  .title {
+    display: inline-block;
+    font-size: 20px;
+    line-height: 40px;
+    padding: 0 0 0 0;
+  }
+
+  .user-icon {
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    vertical-align:middle;
+  }
+
+  .logged-in {
+    height: 36px;
+    padding: 0;
+    margin: 0;
+    font-size: .8em;
+    line-height: 36px;
+  }
+  a {
+    text-decoration: none;
+  }
+}
+
+.home {
   background: #fff;
   color: mat-color($uva-primary, 500);
-
   a {
     color: mat-color($uva-primary, 500);
-    text-decoration: none;
   }
 }
 
 .lvl2 {
   a {
     color: mat-color($uva-primary, 50);
-    text-decoration: none;
   }
 }
 
-div.account {
-  position: absolute;
-  font-size: 14px;
-  right: 20px;
-  top: 10px;
-}
 
 img.lvl2 {
   display: none;
 }
 
-.logged-in {
-  font-size: .8em;
-  line-height: 35px;
-}
 
-.user-icon {
-  border-radius: 50%;
-  height: 35px;
-  width: 35px;
-  vertical-align:middle;
-}
 
-.content, .mat-toolbar {
-  max-width: 1200px;
-  margin:auto;
-}
+
 
 .active {
   background-color: mat-color($uva-accent, 50);
@@ -102,7 +123,7 @@ img.lvl2 {
 
     .menubar {
       display: block;
-      padding: 65px 0 0 84px;
+      padding: 50px 0 0 100px;
       a {
         display: inline-block;
         padding-right: 10px;
